Added the unused the methods and deleted the unwanted methods